--- a/content.html
+++ b/content.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> EditAniac || SOFTWARES FOR YOU</title>
+    <title> EditAniac || Buy Digital Products Online </title>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <!-- favicon -->
     <link rel="icon" href="./img/Icon.png" type="image/gif" sizes="16x16">
